Update contact section wording in index.html

--- a/index.html
+++ b/index.html
@@ -739,7 +739,7 @@
           </ul>
           <div class="contact-meta">
             <span>Based in Badda, Dhaka</span>
-            <span>Open to remote, hybrid, or relocation roles</span>
+            <span>Open to remote, hybrid, or relocation opportunities</span>
           </div>
         </div>
       </div>
