Add new technology and skill pills to index.html
Introduced pills for Ollama, LangChain, Qdrant, and NLP to the skills section, including appropriate icons and SVG for Qdrant. This enhances the representation of supported infrastructure and practices.

--- a/index.html
+++ b/index.html
@@ -701,6 +701,40 @@
                 <iconify-icon icon="logos:linux-tux" class="pill-icon" aria-hidden="true" width="22" height="22"></iconify-icon>
                 <span class="pill-label">Linux</span>
               </span>
+              <span class="pill" data-icon="infra">
+                <iconify-icon icon="simple-icons:ollama" class="pill-icon" aria-hidden="true" width="22" height="22"></iconify-icon>
+                <span class="pill-label">Ollama</span>
+              </span>
+              <span class="pill" data-icon="infra">
+                <iconify-icon icon="simple-icons:langchain" class="pill-icon" aria-hidden="true" width="22" height="22"></iconify-icon>
+                <span class="pill-label">LangChain</span>
+              </span>
+              <span class="pill" data-icon="infra">
+                <span class="pill-icon" aria-hidden="true">
+                  <svg class="pill-icon-svg" role="img" aria-hidden="true" focusable="false" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg">
+                    <defs>
+                      <linearGradient id="qdrantGradient" x1="12" y1="8" x2="52" y2="56" gradientUnits="userSpaceOnUse">
+                        <stop offset="0%" stop-color="#ff6b2d" />
+                        <stop offset="100%" stop-color="#ff3c7d" />
+                      </linearGradient>
+                    </defs>
+                    <circle cx="32" cy="32" r="26" fill="url(#qdrantGradient)" />
+                    <path
+                      d="M32 18a14 14 0 1 0 0 28 14 14 0 0 0 0-28zm0 6a8 8 0 1 1 0 16 8 8 0 0 1 0-16z"
+                      fill="#ffffff"
+                      opacity="0.9"
+                    />
+                    <path
+                      d="M41 41l7 7"
+                      stroke="#ffffff"
+                      stroke-width="4"
+                      stroke-linecap="round"
+                      opacity="0.85"
+                    />
+                  </svg>
+                </span>
+                <span class="pill-label">Qdrant</span>
+              </span>
             </div>
           </article>
           <article class="skill-panel reveal-on-scroll" data-delay="120">
@@ -741,6 +775,10 @@
               <span class="pill" data-icon="practice">
                 <iconify-icon icon="mdi:robot-excited" class="pill-icon" aria-hidden="true" width="22" height="22"></iconify-icon>
                 <span class="pill-label">Agentic Development</span>
+              </span>
+              <span class="pill" data-icon="practice">
+                <iconify-icon icon="mdi:brain" class="pill-icon" aria-hidden="true" width="22" height="22"></iconify-icon>
+                <span class="pill-label">NLP</span>
               </span>
             </div>
           </article>
